css/style.css
@font-face {
    font-family: 'Archivo Narrow';
    font-style: normal;
    font-weight: 400;
    font-display: swap;
    src: url(https://fonts.gstatic.com/s/archivonarrow/v12/tss0ApVBdCYD5Q7hcxTE1ArZ0bbwiXxw2d8o.woff2) format('woff2');
    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

@font-face {
    font-family: 'Archivo Narrow';
    font-style: normal;
    font-weight: 700;
    font-display: swap;
    src: url(https://fonts.gstatic.com/s/archivonarrow/v12/tss3ApVBdCYD5Q7hcxTE1ArZ0b5LrGld-9ICPRBv.woff2) format('woff2');
    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

html {
    font-family: 'Archivo Narrow', Helvetica, sans-serif;
}

* {
    box-sizing: border-box;
}

header {
    display: block;
    margin-bottom: 100px;
}

nav {
    display: flex;
    flex-direction: row;
    flex: 2 2 150px;
    justify-content: space-between;
    position: fixed;
    z-index: 10;
    width: 100%;
    background-color: white;
}

#brand {
    margin: 20px 0 20px 30px;
}

nav ul {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    width: 50vw;
    padding: 20px 100px 20px 100px;
}

#nav-links li a {
    text-decoration: none;
    color: black;
    font-size: 24px;
}

a:hover{
    text-decoration: pointer;
}

#landing {
    display: inline-block;
    background-image: url('../assets/dongsh-tpXxjKnl4Ts-unsplash.jpg');
    background-size: cover;
    position: relative;
    text-align: center;
    width: 100%;
    top: 50px;
}

#landing img {
    border-radius: 50%;
    margin: 20px;
    height: 20%;
    width: 20%;
}

main {
    display: flex;
    flex-direction: row;
    position: relative;
    justify-content: space-between;
    overflow: scroll;
}

main #team {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    margin: 5px 20px 5px 30px;
}

#team img {
    max-width: 100%;
}

main #mission {
    margin: 0 30px 0 30px;
}

h2 {
    font-size: 24px;
    font-weight: 700;
}

p, br {
    line-height: 2;
}

footer {
    display: none;
}

@media only screen and (max-width: 850px) {

    h2 {
        font-size: 28px;
        font-weight: 700;
    }

    #nav-links li a {
        font-size: 28px;
        font-weight: 400;
    }

    p, footer ul li a {
        font-size: 20px;
    }

    header {
        display: inline-block;
    }

    #landing {
        top: 130px;
        width: 100vw;
        margin-bottom: 30px;
    }

    nav {
        flex-direction: column;
        align-items: center;
        justify-content: space-between;
        padding: 10px;
    } 

    #brand {
        margin: 20px 0 5px 0;
    }

    nav ul {
        width: 100vw;
        margin: 20px;
    }

    #nav-links {
        padding: 0;
        align-items: center;
        justify-content: space-evenly;
    }

    main {
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        width: 100vw;
    }

    main #team {
        width: 100vw;
        margin: 0;
        padding: 30px 50px 15px 30px;
    }

    #team img {
        display: none;
    }

    main #mission {
        width: 100vw;
        margin: 0;
        padding: 30px 50px 15px 30px;
    }
}

@media only screen and (max-width: 480px) {
    footer {
        display: block;
        background-color: lightgray;
        justify-content: flex-start;
        text-align: center;
        padding: 10px 0;
    }

    footer p {
        display: inline;
        font-weight: 700;
    }

    footer ul {
        display: flex;
        flex-direction: column;
        flex-wrap: wrap;
        text-align: left;
        align-content: space-around;
        justify-content: flex-start;
        height: 100px;
        margin: 0 85px;
        padding: 0;
        /* width: 300px; */
    }

    span, footer ul li {
        margin: 5px 0;
    }

    footer ul li a {
        color: black;
    }
}

